--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
     <ul>
       <li>거인들</li>
     </ul>
-
     <div class="img">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Ramyun.svg/512px-Ramyun.svg.png" alt="라면 이미지">
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Attack_on_Titan_cover.jpg" alt="진격의 거인 이미지">
     </div>
-
+    
     <p class="note">
      더 다양한 정보는
      <a href="https://namu.wiki/w/진격의 거인" target="_blank" rel="noopener">진격의 거인 나무위키 문서</a>에서 확인하세요.
