--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li>거인들</li>
     </ul>
     <div class="img">
-      <img src="https://blog.kakaocdn.net/dna/dbbJGP/btsd0nBe04q/AAAAAAAAAAAAAAAAAAAAAHwT8J1R-kR6Z03OI-koU86yaHmI95SoD4tu_OMvasfD/img.webp?credential=yqXZFxpELC7KVnFOS48ylbz2pIh7yKj8&expires=1759244399&allow_ip=&allow_referer=&signature=LexRhq7S7SUl4psY9mGekz%2Bbvq0%3D.jpg" alt="진격의 거인 이미지">
+      <img src="https://img1.newsis.com/2011/12/10/NISI20111210_0005575176_web.jpg" alt="진격의 거인 이미지">
     </div>
    
     
