Update Paho MQTT script source URL

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </main>
 
   <!-- Paho MQTT JS (웹소켓 클라이언트) -->
-  <script src="https://unpkg.com/paho-mqtt/mqttws31.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
   <script>
     (function () {
       // ====== 이 부분만 브로커 설정에 맞게 바꾸면 됨 ======
