--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       const host  = "damoa.io";                // MQTT 브로커 주소
       const port  = 9001;                      // WebSocket 포트
       const topic = "ewha/2567018/attack_on_titan"; // 구독할 토픽
-      const useTLS = false;                    // wss 쓸 때만 true
+      const useTLS = true;                    // wss 쓸 때만 true
       // ===============================================
 
       const statusEl = document.getElementById("mqtt-status").querySelector("span");
