--- a/index.html
+++ b/index.html
@@ -1,9 +1,159 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>진격의거인</title>
+  <meta name="description" content="진격의 거인이란 무엇인가" />
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Noto Sans KR, Apple SD Gothic Neo, Malgun Gothic, sans-serif;
+    }
+    .wrap {
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 24px;
+      line-height: 1.6;
+    }
+    h1 {
+      font-size: 2rem;
+      margin: 0 0 0.75rem;
+    }
+    p.lead {
+      color: #444;
+      margin-top: 0;
+    }
+    ol, ul {
+      padding-left: 1.25rem;
+    }
+    li {
+      margin: 0.25rem 0;
+    }
+    .img {
+      margin: 16px 0;
+      text-align: center;
+    }
+    .img img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+    .footer {
+      margin-top: 32px;
+      font-size: .9rem;
+      color: #666;
+    }
+    a {
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .note {
+      background: #f7f7f9;
+      border: 1px solid #eee;
+      padding: 12px 14px;
+      border-radius: 8px;
+    }
+
+    /* MQTT 표시용 스타일 */
+    .mqtt-box {
+      margin-top: 32px;
+      padding: 16px;
+      border-radius: 8px;
+      border: 1px solid #e0e0e0;
+      background: #fafafa;
+      font-size: 0.95rem;
+    }
+    .mqtt-title {
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    .mqtt-status {
+      font-size: 0.9rem;
+      margin-bottom: 4px;
+    }
+    .mqtt-status span {
+      font-weight: 600;
+    }
+    .mqtt-last {
+      margin: 8px 0;
+      padding: 8px 10px;
+      background: #ffffff;
+      border-radius: 6px;
+      border: 1px solid #e5e5e5;
+      white-space: pre-wrap;
+      word-break: break-all;
+    }
+    .mqtt-log {
+      max-height: 200px;
+      overflow-y: auto;
+      margin-top: 8px;
+      padding: 8px 10px;
+      background: #ffffff;
+      border-radius: 6px;
+      border: 1px solid #e5e5e5;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 0.85rem;
+    }
+    .mqtt-log-entry {
+      margin: 2px 0;
+    }
+  </style>
+</head>
+<body>
+  <main class="wrap">
+    <h1>진격의 거인 등장인물</h1>
+    <p class="lead">아래와 같다</p>
+    <ol>
+      <li>주인공: 에렌</li>
+      <li>아르민</li>
+      <li>미카사</li>
+    </ol>
+    <ul>
+      <li>거인들</li>
+    </ul>
+    <div class="img">
+      <img src="https://img1.newsis.com/2011/12/10/NISI20111210_0005575176_web.jpg" alt="진격의 거인 이미지">
+    </div>
+
+    <p class="note">
+      더 다양한 정보는
+      <a href="https://namu.wiki/w/진격의 거인" target="_blank" rel="noopener">진격의 거인 나무위키 문서</a>에서 확인하세요.
+    </p>
+
+    <section class="mqtt-box">
+      <div class="mqtt-title">MQTT 실시간 메시지</div>
+      <div id="mqtt-status" class="mqtt-status">
+        상태: <span>초기화 중...</span>
+      </div>
+      <div id="mqtt-topic" class="mqtt-status">
+        구독 토픽: <code>ewha/2567018/attack_on_titan</code>
+      </div>
+      <div>
+        <strong>최근 수신 메시지</strong>
+        <div id="mqtt-last" class="mqtt-last">아직 수신된 메시지가 없습니다.</div>
+      </div>
+      <div>
+        <strong>메시지 로그</strong>
+        <div id="mqtt-log" class="mqtt-log">
+          </div>
+      </div>
+    </section>
+
+    <div class="footer">
+      이 페이지는 GitHub Pages로 쉽게 배포할 수 있는 단일 HTML 예시입니다.
+    </div>
+  </main>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
   <script>
     (function () {
       // ====== 이 부분만 브로커 설정에 맞게 바꾸면 됨 ======
       const host  = "damoa.io";                   // MQTT 브로커 주소
-      const port  = 9002;                         // ❗ WSS 포트 (일반적으로 9002)로 변경 ❗
+      const port  = 9002;                         // ❗ WSS 포트 (9002로 변경) ❗
       const topic = "ewha/2567018/attack_on_titan"; // 구독할 토픽
       const useTLS = true;                        // ❗ WSS를 위해 true로 변경 ❗
       // ===============================================
@@ -21,7 +171,6 @@
         const div = document.createElement("div");
         div.className = "mqtt-log-entry";
         div.textContent = text;
-        // 새 메시지가 위로 오도록
         logEl.prepend(div);
       }
 
@@ -43,7 +192,6 @@
           statusEl.textContent = "연결 끊김, 재연결 시도 중...";
           appendLog("[WARN] Connection lost (unknown reason)");
         }
-        // 3초 후 재연결 시도
         setTimeout(connectMQTT, 3000);
       }
 
@@ -61,8 +209,6 @@
         statusEl.textContent = "연결 시도 중... (" + host + ":" + port + ", clientId=" + clientId + ")";
 
         try {
-          // path를 따로 쓰지 않는 기본 형태
-          // useSSL: useTLS가 true이므로 wss:// 프로토콜이 사용됨
           client = new Paho.MQTT.Client(host, Number(port), clientId);
 
           client.onConnectionLost = onConnectionLost;
@@ -89,3 +235,5 @@
       connectMQTT();
     })();
   </script>
+</body>
+</html>
